Code refactoring after #1099

--- a/www/stream.html
+++ b/www/stream.html
@@ -2,14 +2,9 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="apple-touch-icon" sizes="180x180" href="https://alexxit.github.io/go2rtc/icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://alexxit.github.io/go2rtc/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://alexxit.github.io/go2rtc/icons/favicon-16x16.png">
-    <link rel="manifest" href="https://alexxit.github.io/go2rtc/icons/site.webmanifest">
-    <link rel="mask-icon" href="https://alexxit.github.io/go2rtc/icons/safari-pinned-tab.svg" color="#5bbad5">
-    <link rel="shortcut icon" href="https://alexxit.github.io/go2rtc/icons/favicon.ico">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="msapplication-config" content="https://alexxit.github.io/go2rtc/icons/browserconfig.xml">
+    <link rel="apple-touch-icon" href="https://alexxit.github.io/go2rtc/icons/apple-touch-icon-180x180.png" sizes="180x180">
+    <link rel="icon" href="https://alexxit.github.io/go2rtc/icons/favicon.ico">
+    <link rel="manifest" href="https://alexxit.github.io/go2rtc/manifest.json">
     <title>go2rtc - Stream</title>
     <style>
         body {
