Add probe link to WebUI

--- a/www/index.html
+++ b/www/index.html
@@ -60,6 +60,7 @@
     const templates = [
         '<a href="stream.html?src={name}">stream</a>',
         '<a href="links.html?src={name}">links</a>',
+        '<a href="api/streams?src={name}&video=all&audio=all&microphone">probe</a>',
         '<a href="#" data-name="{name}">delete</a>',
     ];
 
