--- a/www/index.html
+++ b/www/index.html
@@ -60,7 +60,6 @@
     const templates = [
         '<a href="stream.html?src={name}">stream</a>',
         '<a href="links.html?src={name}">links</a>',
-        '<a href="api/streams?src={name}&video=all&audio=all&microphone">probe</a>',
         '<a href="#" data-name="{name}">delete</a>',
     ];
 
@@ -140,7 +139,7 @@
                 const isChecked = checkboxStates[name] ? 'checked' : '';
                 tr.innerHTML =
                     `<td><label><input type="checkbox" name="${name}" ${isChecked}>${name}</label></td>` +
-                    `<td><a href="api/streams?src=${src}">${online} / info</a></td>` +
+                    `<td><a href="api/streams?src=${src}">${online} / info</a> / <a href="api/streams?src=${src}&video=all&audio=all&microphone">probe</a></td>` +
                     `<td>${links}</td>`;
             }
 
