fix(editor): update schema URL to use HTTPS

--- a/www/editor.html
+++ b/www/editor.html
@@ -46,7 +46,7 @@
         monacoYaml.configureMonacoYaml(monaco, {
             validate: true,
             schemas: [{
-                uri: "http://go2rtc/go2rtc-schema.json", // Arbitrary schema identifier
+                uri: "https://alexxit.github.io/go2rtc/config-schema.json", // Arbitrary schema identifier
                 fileMatch: ["*"],
                 schema: {
                     "type": "object",
